[gd_scene load_steps=4 format=3 uid="uid://cfaifvqu1irmp"]

[ext_resource type="Script" path="res://src/Options.gd" id="1_n04fx"]
[ext_resource type="FontFile" uid="uid://bgcaqkvp1sju0" path="res://assets/fonts/PublicPixel-z84yD.ttf" id="1_xdr21"]

[sub_resource type="Theme" id="Theme_8hd87"]
default_font = ExtResource("1_xdr21")

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_n04fx")

[node name="CenterContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 800)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -277.0
offset_right = 640.0
offset_bottom = 523.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
theme = SubResource("Theme_8hd87")

[node name="MenuTitle" type="Label" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 11

[node name="BGMLabel" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "BGM Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGMVolumeSlider" type="HSlider" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 11

[node name="SFX Volume" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
tick_count = 11

[node name="VSplitContainer" type="VSplitContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="ResetButton" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Reset"

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Confirm"

[connection signal="value_changed" from="CenterContainer/GridContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/GridContainer/BGMVolumeSlider" to="." method="_on_bgm_volume_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/GridContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
